add minimal podd ontology split out from the current podd_base to test spin rules on documents that would be used by podd users

--- a/queryall-ext-rule-spin/src/test/resources/log4j.properties
+++ b/queryall-ext-rule-spin/src/test/resources/log4j.properties
@@ -4,7 +4,7 @@
 # is at the debug level. The value after the comma is the appender for the
 # root and we have given it the name R
 #
-log4j.rootLogger=TRACE, R
+log4j.rootLogger=DEBUG, R
 
 log4j.appender.R=org.apache.log4j.ConsoleAppender
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
@@ -18,5 +18,5 @@ log4j.logger.org.tuckey=WARN
 log4j.logger.de.fuberlin.wiwiss.pubby.negotiation=WARN
 
 log4j.logger.org.queryall=INFO
-
+log4j.logger.org.queryall.impl.rdfrule.PoddSPINRuleTest=TRACE
 
