query all schema now dynamically fetched in memory using a new Locator implementation along with a mapping and a new mapping prefix, not recognised anywhere else, queryall: (as http: URIs are not mapped well/at all sometimes)

--- a/queryall-ext-rule-spin/pom.xml
+++ b/queryall-ext-rule-spin/pom.xml
@@ -98,5 +98,10 @@
 			<version>1.2.16</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.1</version>
+		</dependency>
 	</dependencies>
 </project>
