fix maven scope bugs that eclipse didn't find because it seems to mix the classpaths for all of the scopes into one

--- a/queryall-ext-rule-spin/pom.xml
+++ b/queryall-ext-rule-spin/pom.xml
@@ -78,7 +78,7 @@
 			<artifactId>sesame-rio-rdfxml</artifactId>
 			<version>${sesame.version}</version>
 			<type>jar</type>
-			<scope>runtime</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
