modify queryall.properties key to use queryall.namespace.* instead of queryall.namespace*

--- a/queryall-lib-test/src/test/resources/queryall.properties
+++ b/queryall-lib-test/src/test/resources/queryall.properties
@@ -1,19 +1,19 @@
 queryall.ontologyPrefix=http://purl.org/queryall/
 queryall.ontologySuffix=:
 
-queryall.namespaceNamespaceEntries=ns
-queryall.namespaceProfiles=profile
-queryall.namespaceProjects=project
+queryall.namespace.NamespaceEntries=ns
+queryall.namespace.Profiles=profile
+queryall.namespace.Projects=project
 
-queryall.namespaceProvenanceRecords=provenance
-queryall.namespaceProviders=provider
-queryall.namespaceQueryTypes=query
-queryall.namespaceQueryBundles=querybundle
-queryall.namespaceNormalisationRules=rdfrule
-queryall.namespaceRuleTests=ruletest
-queryall.namespaceStatistics=statistics
-queryall.namespaceTemplates=template
-queryall.namespaceWebApplicationConfiguration=webapp_configuration
+queryall.namespace.ProvenanceRecords=provenance
+queryall.namespace.Providers=provider
+queryall.namespace.QueryTypes=query
+queryall.namespace.QueryBundles=querybundle
+queryall.namespace.NormalisationRules=rdfrule
+queryall.namespace.RuleTests=ruletest
+queryall.namespace.Statistics=statistics
+queryall.namespace.Templates=template
+queryall.namespace.WebApplicationConfiguration=webapp_configuration
 
 #queryall.BaseConfigLocation=${queryall.BaseConfigLocation}
 #queryall.BaseConfigMimeFormat=${queryall.BaseConfigMimeFormat}
