--- a/queryall-ext-rule-spin/pom.xml
+++ b/queryall-ext-rule-spin/pom.xml
@@ -98,5 +98,10 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.openjena</groupId>
+			<artifactId>sesame-jena</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
