--- a/queryall-webapp/pom.xml
+++ b/queryall-webapp/pom.xml
@@ -171,6 +171,11 @@
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
