--- a/queryall-ext-rule-regex/pom.xml
+++ b/queryall-ext-rule-regex/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>queryall-parent</artifactId>
 		<groupId>org.queryall</groupId>
-		<version>1.3-SNAPSHOT</version>
+		<version>1.3</version>
 	</parent>
 	<artifactId>queryall-ext-rule-regex</artifactId>
 	<name>queryall-ext-rule-regex</name>
