--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,4 @@
 .settings
 .checkstyle
 *~
-/queryall-webapp/pom.xml.versionsBackup
-/queryall-reasoner/pom.xml.versionsBackup
+pom.xml.versionsBackup
