--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.queryall</groupId>
 	<artifactId>queryall-parent</artifactId>
-	<version>1.3</version>
+	<version>1.3.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>queryall-api</module>
@@ -58,7 +58,7 @@
 		<junit.version>4.10</junit.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<queryall.version>1.3</queryall.version>
+		<queryall.version>1.3.1-SNAPSHOT</queryall.version>
 		<sesame.version>2.6.5</sesame.version>
 		<sesametools.version>1.6</sesametools.version>
 		<slf4j.version>1.6.4</slf4j.version>
