--- a/queryall-content-negotiation/pom.xml
+++ b/queryall-content-negotiation/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>queryall-parent</artifactId>
 		<groupId>org.queryall</groupId>
-		<version>1.3</version>
+		<version>1.3.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>queryall-content-negotiation</artifactId>
 	<name>queryall-content-negotiation</name>
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.queryall</groupId>
 			<artifactId>queryall-api</artifactId>
-			<version>${queryall.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
