--- a/queryall-ext-rule-xslt/pom.xml
+++ b/queryall-ext-rule-xslt/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>queryall-parent</artifactId>
 		<groupId>org.queryall</groupId>
-		<version>1.3</version>
+		<version>1.3.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>queryall-ext-rule-xslt</artifactId>
 	<name>queryall-ext-rule-xslt</name>
@@ -33,21 +33,21 @@
 		<dependency>
 			<groupId>org.queryall</groupId>
 			<artifactId>queryall-api</artifactId>
-			<version>${queryall.version}</version>
+			<version>${project.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.queryall</groupId>
 			<artifactId>queryall-lib</artifactId>
-			<version>${queryall.version}</version>
+			<version>${project.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.queryall</groupId>
 			<artifactId>queryall-api</artifactId>
-			<version>${queryall.version}</version>
+			<version>${project.version}</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
