--- a/queryall-ext-querytype-regex/pom.xml
+++ b/queryall-ext-querytype-regex/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>queryall-parent</artifactId>
 		<groupId>com.github.queryall</groupId>
-		<version>1.3.1-SNAPSHOT</version>
+		<version>1.3.1</version>
 	</parent>
 	<artifactId>queryall-ext-querytype-regex</artifactId>
 	<name>queryall-ext-querytype-regex</name>
