--- a/queryall-lib-test/pom.xml
+++ b/queryall-lib-test/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>queryall-parent</artifactId>
 		<groupId>com.github.queryall</groupId>
-		<version>1.3.1-SNAPSHOT</version>
+		<version>1.3.1</version>
 	</parent>
 	<artifactId>queryall-lib-test</artifactId>
 	<name>queryall-lib-test</name>
