switch from test-jar-no-fork to test-jar for surefire plugin

--- a/pom.xml
+++ b/pom.xml
@@ -326,7 +326,7 @@
 						<execution>
 							<id>attach-test-sources</id>
 							<goals>
-								<goal>test-jar-no-fork</goal>
+								<goal>test-jar</goal>
 							</goals>
 						</execution>
 					</executions>
