--- a/queryall-ext-rule-owl/pom.xml
+++ b/queryall-ext-rule-owl/pom.xml
@@ -16,8 +16,13 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>com.github.ansell.owlapi</groupId>
+            <artifactId>owlapi-api</artifactId>
+            <version>3.5-SNAPSHOT</version>
+        </dependency>
 		<dependency>
-			<groupId>com.clarkparsia</groupId>
+			<groupId>com.github.ansell.pellet</groupId>
 			<artifactId>pellet-owlapiv3</artifactId>
 			<version>2.3.1-SNAPSHOT</version>
 		</dependency>
