--- a/queryall-lib-test/pom.xml
+++ b/queryall-lib-test/pom.xml
@@ -168,8 +168,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>net.fortytwo.sesametools</groupId>
-			<artifactId>nquads</artifactId>
+			<groupId>org.openrdf.sesame</groupId>
+			<artifactId>sesame-rio-nquads</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
