change groupId to com.github.ansell.queryall and bump to 1.4-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <version>7</version>
     </parent>
 
-    <groupId>com.github.queryall</groupId>
+    <groupId>com.github.ansell.queryall</groupId>
     <artifactId>queryall-parent</artifactId>
-    <version>1.3.3</version>
+    <version>1.4-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>queryall-api</module>
