--- a/queryall-ext-rule-owl/pom.xml
+++ b/queryall-ext-rule-owl/pom.xml
@@ -4,9 +4,10 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
+		<groupId>com.github.ansell.queryall</groupId>
 		<artifactId>queryall-parent</artifactId>
-		<groupId>com.github.queryall</groupId>
-		<version>1.3.3-SNAPSHOT</version>
+		<version>1.4-SNAPSHOT</version>
+		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>queryall-ext-rule-owl</artifactId>
 	<name>queryall-ext-rule-owl</name>
@@ -19,12 +20,12 @@
         <dependency>
             <groupId>com.github.ansell.owlapi</groupId>
             <artifactId>owlapi-api</artifactId>
-            <version>3.5-SNAPSHOT</version>
+            <version>3.4.3.1-ansell-SNAPSHOT</version>
         </dependency>
 		<dependency>
 			<groupId>com.github.ansell.pellet</groupId>
 			<artifactId>pellet-owlapiv3</artifactId>
-			<version>2.3.1-SNAPSHOT</version>
+			<version>2.3.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
