--- a/queryall-lib/pom.xml
+++ b/queryall-lib/pom.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.github.queryall</groupId>
+		<groupId>com.github.ansell.queryall</groupId>
 		<artifactId>queryall-parent</artifactId>
-		<version>1.3.3</version>
-		<relativePath>../pom.xml</relativePath>
+		<version>1.4-SNAPSHOT</version>
+		<relativePath>..</relativePath>
 	</parent>
-	<modelVersion>4.0.0</modelVersion>
 	<artifactId>queryall-lib</artifactId>
 	<packaging>jar</packaging>
 	<name>queryall lib</name>
 	<dependencies>
 		<dependency>
-			<groupId>com.github.queryall</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>queryall-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
