--- a/queryall-webapp/pom.xml
+++ b/queryall-webapp/pom.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<parent>
-		<groupId>com.github.queryall</groupId>
-		<artifactId>queryall-parent</artifactId>
-		<version>1.3.3</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
 	<modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.github.ansell.queryall</groupId>
+        <artifactId>queryall-parent</artifactId>
+        <version>1.4-SNAPSHOT</version>
+        <relativePath>..</relativePath>
+    </parent>
 	<artifactId>queryall-webapp</artifactId>
 	<packaging>jar</packaging>
 	<name>Queryall Webapp library</name>
 	<dependencies>
 		<dependency>
-			<groupId>com.github.queryall</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>queryall-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.queryall</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>queryall-lib</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.queryall</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>queryall-content-negotiation</artifactId>
 			<version>${project.version}</version>
 		</dependency>
