switch out sesametools for sesame-rio-extensions

--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,8 @@
         <junit.version>4.11</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <sesame.version>2.7-SNAPSHOT</sesame.version>
-        <sesametools.version>1.7-SNAPSHOT</sesametools.version>
+        <sesame.version>2.7.0-beta1</sesame.version>
+        <sesamerioextensions.version>0.2</sesamerioextensions.version>
         <slf4j.version>1.7.2</slf4j.version>
     </properties>
     <prerequisites>
@@ -174,11 +174,13 @@
                 <artifactId>sesame-rio-trig</artifactId>
                 <version>${sesame.version}</version>
             </dependency>
-            <dependency>
-                <groupId>net.fortytwo.sesametools</groupId>
-                <artifactId>rdfjson</artifactId>
-                <version>${sesametools.version}</version>
-            </dependency>
+	        <dependency>
+	            <groupId>com.github.ansell.sesame-rio-extensions</groupId>
+	            <artifactId>sesame-rio-extensions-rdfjson</artifactId>
+	            <version>${sesamerioextensions.version}</version>
+	            <type>jar</type>
+	            <scope>runtime</scope>
+	        </dependency>
             <dependency>
                 <groupId>org.apache.velocity</groupId>
                 <artifactId>velocity</artifactId>
